kubernetes/manifests/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.slux-solutions.com`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
  tls:
    secretName: slux-solutions-wildcard-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.slux-solutions.com`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: monitoring
      services:
        - name: grafana-service
          port: 3000
